   exception. This better matches with what lxml does.
 - **backwards-incompatible**: The ``persistent`` kwarg is removed from the
   SqliteCache.__init__() call. Use the new InMemoryCache() instead when you
   don't want to persist data. This was required to make the SqliteCache 
   backend thread-safe since we now open/close the db when writing/reading 
   from it (with an additional lock).


0.12.0 (2016-07-09)
-------------------
 - **backwards-incompatible**: Choice elements are now unwrapped if 
   maxOccurs=1. This results in easier operation definitions when choices are
   used. 
 - **backwards-incompatible**: The _soapheader kwarg is renamed to _soapheaders
   and now requires a nested dictionary with the header name as key or a list
   of values (value object or lxml.etree.Element object). Please see the 
   call signature of the function using ``python -mzeep <wsdl>``.
 - Support the element ref's to xsd:schema elements.
 - Improve the signature() output of element and type definitions
 - Accept lxml.etree.Element objects as value for Any elements.
 - And various other fixes
 

0.11.0 (2016-07-03)
-------------------
 - **backwards-incompatible**: The kwarg name for Any and Choice elements are
   renamed to generic ``_value_N`` names.
 - **backwards-incompatible**: Client.set_address() is replaced with the 
   Client.create_service() call
 - Auto-load the http://schemas.xmlsoap.org/soap/encoding/ schema if it is
   referenced but not imported. Too many XSD's assume that the schema is always
   available.
 - Major refactoring of the XSD handling to correctly support nested 
   xsd:sequence elements. 
 - Add ``logger.debug()`` calls around Transport.post() to allow capturing the
   content send/received from the server
 - Add proper support for default values on attributes and elements.


0.10.0 (2016-06-22)
-------------------
 - Make global elements / types truly global by refactoring the Schema 