@@ -7,6 +7,7 @@
    don't want to persist data. This was required to make the SqliteCache 
    backend thread-safe since we now open/close the db when writing/reading 
    from it (with an additional lock).
+ - Fix zeep.helpers.serialize_object() for nested objects (#123)
 
 
 0.12.0 (2016-07-09)
